add tomcat manager conf

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -3,10 +3,11 @@
 
 <html xmlns = "http://www.w3.org/1999/xhtml">
     <head>
-        <title>JSF Tutorial!</title>
+        <title>Hellow</title>
     </head>
 
     <body>
-    #{first.getMessage()}
+        <h1 style="text-align: center">#{first.getMessage()}</h1>
+        <img style="width:50% ;display: block; margin-left: auto; margin-right: auto; width: 50%" src="https://www.kindpng.com/picc/m/66-668810_girl-anime-girlanime-animegirl-happy-girlhappy-happy-anime.png" alt=""/>
     </body>
 </html>
