--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -8,6 +8,6 @@
 
     <body>
         <h1 style="text-align: center">#{first.getMessage()}</h1>
-        <img style="width:50% ;display: block; margin-left: auto; margin-right: auto; width: 50%" src="https://www.kindpng.com/picc/m/66-668810_girl-anime-girlanime-animegirl-happy-girlhappy-happy-anime.png" alt="your internet suck, please turn it on"/>
+        <img style="width:50% ;display: block; margin-left: auto; margin-right: auto; width: 50%" src="https://lh3.googleusercontent.com/-HwC1hSZFS84/Xonjok5gIsI/AAAAAAAAVPA/mD0hAntm2rMKFLjeuNvswjxx0qknX0B-QCK8BGAsYHg/s512/2020-04-05.png" alt="your internet suck, please turn it on"/>
     </body>
 </html>
