test deploy ec2, fix resource access on css

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -12,6 +12,6 @@
         <h:graphicImage styleClass="center-image" library="images" name="yaay.png"/>
         <br></br>
         <br></br>
-        <h:link outcome="studentform" styleClass="btn btn--pill btn--blue" value="Isi Form"/>
+        <h:link outcome="studentform" styleClass="btn btn--pill btn--blue" value="Fill Survey Form"/>
     </h:body>
 </html>
