add persistence layer functionality

--- a/src/main/webapp/studentform.xhtml
+++ b/src/main/webapp/studentform.xhtml
@@ -150,7 +150,7 @@
                              required="false"/>
                 <h:message for="comment" style="color: red"/>
                <div class="p-t-10">
-                        <h:commandButton styleClass="btn btn--pill btn--green" value="Submit" action="#{StudentBean.storeFormData}"/>
+                        <h:commandButton styleClass="btn btn--pill btn--green" value="Submit" action="#{StudentBean.saveStudentDetails(StudentBean)}"/>
                     </div>
                 </h:form>
                 <div class="p-t-10">
